# gallery

./: README.md  com.riyani.chobi.json  com.riyani.chobi.json~
chobi/: README.md  com.riyani.chobi.json  meson.build
chobi/data/: com.riyani.chobi.desktop.in  com.riyani.chobi.gschema.xml  com.riyani.chobi.metainfo.xml.in  com.riyani.chobi.service.in  meson.build
chobi/po/: POTFILES.in  meson.build
chobi/src/: chobi.gresource.xml  favouritesPage.py  libraryPage.py  meson.build  window.py
data/icons/: meson.build
src/: chobi.in  dayPage.py  favouritesPage.py  libraryPage.py  main.py  peoplePage.py  window.py  window.ui
